# KeyframeGridCellMedianValues

./: CMakeLists.txt  README.md
LibraryProject/include/: CSVFileWriter.hpp  Median.hpp  Process.hpp  StringUtil.hpp  VideoFileFrameInformation.hpp
LibraryProject/source/: CMakeLists.txt  CSVFileWriter.cpp  Process.cpp  StringUtil.cpp  VideoFileFrameInformation.cpp
MainProject/include/: CalculateMedianValuesOfPixelsOfFrameGridCells.hpp  PrintCSVFileLines.hpp  ProcessArguments.hpp
MainProject/source/: CMakeLists.txt  CalculateMedianValuesOfPixelsOfFrameGridCells.cpp  PrintCSVFileLines.cpp  ProcessArguments.cpp  main.cpp
media/: ffmpeg__keyframe_extraction  videoFileFromWhichToExtractKeyframes_mp4_properties.txt
